@@ -59,6 +59,9 @@
    - djm@cvs.openbsd.org 2006/08/29 09:44:00
      [regress/sftp-cmds.sh]
      clean up our mess
+   - markus@cvs.openbsd.org 2006/11/06 09:27:43
+     [regress/cfgmatch.sh]
+     fix quoting for non-(c)sh login shells.
 
 20070927
  - (dtucker) [configure.ac atomicio.c] Fall back to including <sys/poll.h> if
@@ -3330,4 +3333,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4772 2007/10/26 04:43:50 djm Exp $
+$Id: ChangeLog,v 1.4773 2007/10/26 04:44:34 djm Exp $
